# licensio

./: LICENSE  README.md  pyproject.toml
docs/: agpl.md  apache.md  bsd.md  cc0.md  epl.md  gnu.md  index.rst  lgpl.md  mit.md  wtfpl.rst
licensio/: __init__.py  agpl.py  apache.py  bsd.py  cc0.py  epl.py  gnu.py  lgpl.py  mit.py  wtfpl.py
